--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;900&display=swap" rel="stylesheet">
         <!--css link-->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="istyle.css">
         <!--js link-->
         <script defer src="C:\Users\DELL\Documents\My own web\resume\java.js"></script>
         <!--font awsome-->
